lib/velosiparser/tests/vrs/interface/interface_z01_register_wrong_separator_expected.txt
error: expected `}`, found `;`
     --> tests/vrs/interface/parts/interface_01_register_wrong_separator.vrs:2:18
      |
    2 |      reg foo [ 8 ];
      |                   ^ help: add `}` here.
